SUBDIRS =  dua_tools route_tools tls_tools traceExporter trip_tools

EXTRA_DIST =  3_7to3_6.pl CollectXMLAttributes.pl CollectXMLAttributes2.pl \
DetectorTest2.py Flows2CSV.pl Lines2CSV.pl SelectedLanes2EdgeNames.pl \
buildAllDUARoutes.py buildAllJTRRoutes.py buildAllNets.py buildExamples.py \
csv2xml.pl duplicateRoutes.pl generate-ns2.py invent2csv.pl \
keepRoutesContainingEdge.pl pruneRouteAlternatives.pl pruneRoutes.pl \
removeRoutesContainingEdge.pl removeRoutesIfNotInInterval.pl runExamples.py \
xml2cvs.pl

